--- a/src/app/views/auth/register/register.component.html
+++ b/src/app/views/auth/register/register.component.html
@@ -1,10 +1,10 @@
 <div class="container mx-auto px-4 h-full">
   <div class="flex content-center items-center justify-center h-full">
-    <div class="w-full lg:w-6/12 px-4">
+    <div class="w-full lg:w-6/12">
       <div
-        class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-blueGray-200 border-0"
-      >
-        <div class="rounded-t mb-0 px-6 py-6">
+        class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg bg-blueGray-200 border-4"
+      > 
+        <!-- <div class="rounded-t mb-0 px-6 py-6">
           <div class="text-center mb-3">
             <h6 class="text-blueGray-500 text-sm font-bold">Sign up with</h6>
           </div>
@@ -25,11 +25,11 @@
             </button>
           </div>
           <hr class="mt-6 border-b-1 border-blueGray-300" />
-        </div>
-        <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
-          <div class="text-blueGray-400 text-center mb-3 font-bold">
+        </div> -->
+        <div class="flex-auto px-4 lg:px-10 py-10 pt-4">
+          <!-- <div class="text-blueGray-400 text-center mb-3 font-bold">
             <small>Or sign up with credentials</small>
-          </div>
+          </div> -->
           <form>
             <div class="relative w-full mb-3">
               <label
