--- a/src/app/components/footers/footer-small/footer-small.component.html
+++ b/src/app/components/footers/footer-small/footer-small.component.html
@@ -14,7 +14,7 @@
             href="https://www.creative-tim.com?ref=na-footer-small"
             class="text-white hover:text-blueGray-300 text-sm font-semibold py-1"
           >
-            Creative Tim
+            Venue Pod
           </a>
         </div>
       </div>
@@ -25,7 +25,7 @@
               href="https://www.creative-tim.com?ref=na-footer-small"
               class="text-white hover:text-blueGray-300 text-sm font-semibold block py-1 px-3"
             >
-              Creative Tim
+              Venue Pod
             </a>
           </li>
           <li>
@@ -36,7 +36,7 @@
               About Us
             </a>
           </li>
-          <li>
+          <!-- <li>
             <a
               href="http://blog.creative-tim.com?ref=na-footer-small"
               class="text-white hover:text-blueGray-300 text-sm font-semibold block py-1 px-3"
@@ -51,7 +51,7 @@
             >
               MIT License
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
