--- a/src/app/components/navbars/auth-navbar/auth-navbar.component.html
+++ b/src/app/components/navbars/auth-navbar/auth-navbar.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg"
+  class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between bg-blueGray-800 px-2 py-3 navbar-expand-lg"
 >
   <div
     class="container px-4 mx-auto flex flex-wrap items-center justify-between"
@@ -11,7 +11,7 @@
         [routerLink]="['/']"
         class="text-white text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-nowrap uppercase"
       >
-        Notus Angular
+        Venue Pod
       </a>
       <button
         class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none"
@@ -26,7 +26,7 @@
       [ngClass]="{ hidden: !navbarOpen, 'block rounded shadow-lg': navbarOpen }"
       id="example-navbar-warning"
     >
-      <ul class="flex flex-col lg:flex-row list-none mr-auto">
+      <!-- <ul class="flex flex-col lg:flex-row list-none mr-auto">
         <li class="flex items-center">
           <a
             class="lg:text-white lg:hover:text-blueGray-200 text-blueGray-700 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
@@ -38,8 +38,8 @@
             Docs
           </a>
         </li>
-      </ul>
-      <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
+      </ul> -->
+      <!-- <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
         <li class="flex items-center">
           <app-pages-dropdown class="block"></app-pages-dropdown>
         </li>
@@ -90,7 +90,7 @@
             <i class="fas fa-arrow-alt-circle-down"></i> Download
           </button>
         </li>
-      </ul>
+      </ul> -->
     </div>
   </div>
 </nav>
