--- a/src/app/components/cards/card-line-chart/card-line-chart.component.html
+++ b/src/app/components/cards/card-line-chart/card-line-chart.component.html
@@ -1,17 +1,17 @@
 <div
-  class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-blueGray-700"
+  class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-white-700"
 >
-  <div class="rounded-t mb-0 px-4 py-3 bg-transparent">
+  <div class="rounded-t mb-0 px-4 py-3 bg-white">
     <div class="flex flex-wrap items-center">
       <div class="relative w-full max-w-full flex-grow flex-1">
-        <h6 class="uppercase text-blueGray-100 mb-1 text-xs font-semibold">
+        <h6 class="uppercase text-blueGray-700 mb-1 text-xs font-semibold">
           Overview
         </h6>
-        <h2 class="text-white text-xl font-semibold">Sales value</h2>
+        <h2 class="text-blueGray text-xl font-semibold">Subscription</h2>
       </div>
     </div>
   </div>
-  <div class="p-4 flex-auto">
+  <div class=" bg-white p-4 flex-auto">
     <!-- Chart -->
     <div class="relative" style="height: 350px">
       <canvas id="line-chart"></canvas>
