--- a/src/app/components/headers/header-stats/header-stats.component.html
+++ b/src/app/components/headers/header-stats/header-stats.component.html
@@ -1,12 +1,12 @@
 <!-- Header -->
-<div class="relative bg-red-600 md:pt-32 pb-32 pt-12">
+<div class="relative bg-blueGray-800 md:pt-32 pb-32 pt-12">
   <div class="px-4 md:px-10 mx-auto w-full">
     <div>
       <!-- Card stats -->
       <div class="flex flex-wrap">
         <div class="w-full lg:w-6/12 xl:w-3/12 px-4">
-          <app-card-stats
-            statSubtitle="TRAFFIC"
+          <!-- <app-card-stats
+            statSubtitle="TOTAL USERS"
             statTitle="350,897"
             statArrow="up"
             statPercent="3.48"
@@ -14,11 +14,19 @@
             statDescripiron="Since last month"
             statIconName="far fa-chart-bar"
             statIconColor="bg-red-500"
+          ></app-card-stats> -->
+          <app-card-stats
+            statSubtitle="TOTAL USERS"
+            statTitle="350,897"
+            statPercentColor="text-emerald-500"
+            statDescripiron="Since last month"
+            statIconName="fas fa-users"
+            statIconColor="bg-red-500"
           ></app-card-stats>
         </div>
         <div class="w-full lg:w-6/12 xl:w-3/12 px-4">
-          <app-card-stats
-            statSubtitle="NEW USERS"
+          <!-- <app-card-stats
+            statSubtitle="TOTAL BOOKINGS"
             statTitle="2,356"
             statArrow="down"
             statPercent="3.48"
@@ -26,11 +34,20 @@
             statDescripiron="Since last week"
             statIconName="fas fa-chart-pie"
             statIconColor="bg-orange-500"
+          ></app-card-stats> -->
+          <app-card-stats
+            statSubtitle="TOTAL BOOKINGS"
+            statTitle="2,356"
+            statArrow="down"
+            statPercentColor="text-red-500"
+            statDescripiron="Since last week"
+            statIconName="fas fa-money-bill-alt"
+            statIconColor="bg-orange-500"
           ></app-card-stats>
         </div>
         <div class="w-full lg:w-6/12 xl:w-3/12 px-4">
-          <app-card-stats
-            statSubtitle="SALES"
+          <!-- <app-card-stats
+            statSubtitle="DAILY EARNING"
             statTitle="924"
             statArrow="down"
             statPercent="1.10"
@@ -38,17 +55,35 @@
             statDescripiron="Since yesterday"
             statIconName="fas fa-users"
             statIconColor="bg-pink-500"
+          ></app-card-stats> -->
+          <app-card-stats
+            statSubtitle="DAILY EARNING"
+            statTitle="924"
+            statArrow="down"
+            statPercentColor="text-orange-500"
+            statDescripiron="Since yesterday"
+            statIconName="fas fa-dollar-sign"
+            statIconColor="bg-pink-500"
           ></app-card-stats>
         </div>
         <div class="w-full lg:w-6/12 xl:w-3/12 px-4">
-          <app-card-stats
-            statSubtitle="PERFORMANCE"
+          <!-- <app-card-stats
+            statSubtitle="TOTAL EARNINGS"
             statTitle="49,65%"
             statArrow="up"
             statPercent="12"
             statPercentColor="text-emerald-500"
             statDescripiron="Since last month"
             statIconName="fas fa-percent"
+            statIconColor="bg-emerald-500"
+          ></app-card-stats> -->
+          <app-card-stats
+            statSubtitle="TOTAL EARNINGS"
+            statTitle="49,65%"
+            statArrow="up"
+            statPercentColor="text-emerald-500"
+            statDescripiron="Since last month"
+            statIconName="fas fa-dollar-sign"
             statIconColor="bg-emerald-500"
           ></app-card-stats>
         </div>
