--- a/src/app/components/cards/card-page-visits/card-page-visits.component.html
+++ b/src/app/components/cards/card-page-visits/card-page-visits.component.html
@@ -4,7 +4,7 @@
   <div class="rounded-t mb-0 px-4 py-3 border-0">
     <div class="flex flex-wrap items-center">
       <div class="relative w-full px-4 max-w-full flex-grow flex-1">
-        <h3 class="font-semibold text-base text-blueGray-700">User Requests</h3>
+        <h3 class="font-semibold text-base text-blueGray-700">Venue Requests</h3>
       </div>
       <div class="relative w-full px-4 max-w-full flex-grow flex-1 text-right">
         <button
@@ -64,7 +64,12 @@
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
           >
             <i class="text-emerald-500 mr-4"></i>
-             Accept/Reject
+            <button class="bg-emerald-500 text-white active:bg-red-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+              Accept
+            </button>
+            <button class="bg-red-500 text-white active:bg-red-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+              Reject
+            </button>
           </td>
         </tr>
         <tr>
@@ -87,7 +92,12 @@
             class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
           >
             <i class="text-orange-500 mr-4"></i>
-            Accept/Reject
+            <button class="bg-emerald-500 text-white active:bg-red-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+              Accept
+            </button>
+            <button class="bg-red-500 text-white active:bg-red-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+              Reject
+            </button>
           </td>
         </tr>
         <!-- <tr>
