--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -144,16 +144,16 @@
             ></i>
             Tables
           </a>
-          
+
         </li>
         <li class="items-center">
           <a
-            [routerLink]="['/admin/tables']"
+            [routerLink]="['/admin/user-table']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
-            #adminTables="routerLinkActive"
+            #userTables="routerLinkActive"
             [ngClass]="
-              adminTables.isActive
+            userTables.isActive
                 ? 'text-red-600 hover:text-red-700'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
@@ -161,7 +161,7 @@
             <i
               class="fas fa-users mr-2 text-sm"
               [ngClass]="
-                adminTables.isActive ? 'opacity-75' : 'text-blueGray-300'
+              userTables.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
             User tables
