--- a/src/app/components/cards/card-profile/card-profile.component.html
+++ b/src/app/components/cards/card-profile/card-profile.component.html
@@ -14,68 +14,49 @@
       </div>
       <div class="w-full px-4 text-center mt-20">
         <div class="flex justify-center py-4 lg:pt-4 pt-8">
-          <div class="mr-4 p-3 text-center">
-            <span
-              class="text-xl font-bold block uppercase tracking-wide text-blueGray-600"
-            >
-              22
-            </span>
-            <span class="text-sm text-blueGray-400">Friends</span>
-          </div>
-          <div class="mr-4 p-3 text-center">
-            <span
-              class="text-xl font-bold block uppercase tracking-wide text-blueGray-600"
-            >
-              10
-            </span>
-            <span class="text-sm text-blueGray-400">Photos</span>
-          </div>
-          <div class="lg:mr-4 p-3 text-center">
-            <span
-              class="text-xl font-bold block uppercase tracking-wide text-blueGray-600"
-            >
-              89
-            </span>
-            <span class="text-sm text-blueGray-400">Comments</span>
-          </div>
+          <hr>
         </div>
       </div>
     </div>
-    <div class="text-center mt-12">
+    <div class="mt-12">
       <h3
-        class="text-xl font-semibold leading-normal mb-2 text-blueGray-700 mb-2"
+        class="text-xl leading-normal mb-2 text-blueGray-700 mb-2 border-2"
       >
-        Jenna Stones
+        Full Name : Darji Rajveer pravinbhai
       </h3>
-      <div
+
+      <h2 class="text-xl leading-normal mb-2 text-blueGray-700 mb-2 border-2">
+        Email : rajveerdarji7622@gmail.com
+      </h2>
+
+      <h2 class="text-xl leading-normal mb-2 text-blueGray-700 mb-2 border-2">
+        Mobile no : 9822146532
+      </h2>
+
+      <br>
+
+      <div class="text-center">
+        <button class="bg-emerald-500 text-center text-white active:bg-red-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+          Edit profile
+        </button>
+      </div>
+
+
+
+      <!-- <div
         class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase"
       >
         <i class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i>
         Los Angeles, California
-      </div>
-      <div class="mb-2 text-blueGray-600 mt-10">
+      </div> -->
+      <!-- <div class="mb-2 text-blueGray-600 mt-10">
         <i class="fas fa-briefcase mr-2 text-lg text-blueGray-400"></i>
         Solution Manager - Creative Tim Officer
       </div>
       <div class="mb-2 text-blueGray-600">
         <i class="fas fa-university mr-2 text-lg text-blueGray-400"></i>
         University of Computer Science
-      </div>
-    </div>
-    <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
-      <div class="flex flex-wrap justify-center">
-        <div class="w-full lg:w-9/12 px-4">
-          <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
-            An artist of considerable range, Jenna the name taken by
-            Melbourne-raised, Brooklyn-based Nick Murphy writes, performs and
-            records all of his own music, giving it a warm, intimate feel with a
-            solid groove structure. An artist of considerable range.
-          </p>
-          <a href="javascript:void(0);" class="font-normal text-red-600">
-            Show more
-          </a>
-        </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
