--- a/src/app/components/cards/card-settings/card-settings.component.html
+++ b/src/app/components/cards/card-settings/card-settings.component.html
@@ -4,88 +4,109 @@
   <div class="rounded-t bg-white mb-0 px-6 py-6">
     <div class="text-center flex justify-between">
       <h6 class="text-blueGray-700 text-xl font-bold">My account</h6>
-      <button
-        class="bg-red-600 text-white active:bg-red-700 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 ease-linear transition-all duration-150"
-        type="button"
-      >
-        Settings
+      <button class="bg-emerald-500 text-white active:bg-red-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+        Save
       </button>
     </div>
   </div>
   <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
     <form>
-      <h6 class="text-blueGray-400 text-sm mt-3 mb-6 font-bold uppercase">
-        User Information
-      </h6>
+      <!-- <h6 class="text-blueGray-400 text-sm mt-3 mb-6 font-bold uppercase">
+        Profile pic
+      </h6> -->
       <div class="flex flex-wrap">
-        <div class="w-full lg:w-6/12 px-4">
+        <div class="w-full px-4">
           <div class="relative w-full mb-3">
-            <label
-              class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
-              htmlFor="grid-password"
-            >
-              Username
-            </label>
-            <input
-              type="text"
-              class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
-              value="lucky.jesse"
-            />
+            
+            
+            <label class="text-blueGray-600 text-xl font-bold mb-2">Profile pic</label>&nbsp;
+
+            <span>
+              <button class="bg-emerald-500 text-white active:bg-red-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+                <i class="fas fa-camera"></i>&nbsp;Change
+              </button>
+            </span>
           </div>
         </div>
-        <div class="w-full lg:w-6/12 px-4">
+        
+        <div class="w-full px-4">
           <div class="relative w-full mb-3">
             <label
-              class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+              class="block text-blueGray-800 text-6xs font-bold mb-2"
               htmlFor="grid-password"
             >
-              Email address
+              Full Name:
             </label>
+            <div class="relative flex w-full flex-wrap items-stretch mb-3">
+              <span class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3">
+                <i class="fas fa-user"></i>
+              </span>
             <input
               type="email"
-              class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
-              value="jesse@example.com"
+              class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 pl-10"
+              placeholder="Enter a name"
             />
-          </div>
+              
+            </div>
         </div>
-        <div class="w-full lg:w-6/12 px-4">
+        </div>
+        <div class="w-full px-4">
           <div class="relative w-full mb-3">
             <label
-              class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+              class="block text-blueGray-800 text-6xs font-bold mb-2"
               htmlFor="grid-password"
             >
-              First Name
+              Email:
             </label>
+            <div class="relative flex w-full flex-wrap items-stretch mb-3">
+              <span class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3">
+                <i class="fas fa-envelope"></i>
+              </span>
             <input
-              type="text"
-              class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
-              value="Lucky"
+              type="email"
+              class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 pl-10"
+              placeholder="Email"
             />
-          </div>
+              
+            </div>
         </div>
-        <div class="w-full lg:w-6/12 px-4">
+        </div>
+        <div class="w-full px-4">
           <div class="relative w-full mb-3">
             <label
-              class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+              class="block text-blueGray-800 text-6xs font-bold mb-2"
               htmlFor="grid-password"
             >
-              Last Name
+              Mobile no:
             </label>
+            <div class="relative flex w-full flex-wrap items-stretch mb-3">
+              <span class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3">
+                <i class="fas fa-phone"></i>
+              </span>
             <input
-              type="text"
-              class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
-              value="Jesse"
+              type="email"
+              class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150 pl-10"
+              placeholder="Enter a mobile number"
             />
+              
+            </div>
+        </div>
+        </div>
+
+        <div class="w-full px-4">
+          <div class="relative w-full mb-3">
+            <label class="uppercase text-blueGray-600 text-6xs font-bold mb-2">Password</label>&nbsp;
+
+            <span>
+              <button class="bg-emerald-500 text-white active:bg-red-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+                Change password
+              </button>
+            </span>
           </div>
         </div>
       </div>
 
-      <hr class="mt-6 border-b-1 border-blueGray-300" />
-
-      <h6 class="text-blueGray-400 text-sm mt-3 mb-6 font-bold uppercase">
-        Contact Information
-      </h6>
-      <div class="flex flex-wrap">
+      <!-- <div class="flex flex-wrap">
         <div class="w-full lg:w-12/12 px-4">
           <div class="relative w-full mb-3">
             <label
@@ -146,7 +167,7 @@
             />
           </div>
         </div>
-      </div>
+      </div> -->
 
       <hr class="mt-6 border-b-1 border-blueGray-300" />
 
@@ -157,7 +178,7 @@
         <div class="w-full lg:w-12/12 px-4">
           <div class="relative w-full mb-3">
             <label
-              class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
+              class="block uppercase text-blueGray-600 text-6xs font-bold mb-2"
               htmlFor="grid-password"
             >
               About me
