--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -167,6 +167,27 @@
             User tables
           </a>
         </li>
+        <li class="items-center">
+          <a
+            [routerLink]="['/admin/active-locations']"
+            class="text-xs uppercase py-3 font-bold block"
+            routerLinkActive
+            #activeLocations="routerLinkActive"
+            [ngClass]="
+            activeLocations.isActive
+                ? 'text-red-600 hover:text-red-700'
+                : 'text-blueGray-700 hover:text-blueGray-500'
+            "
+          >
+            <i
+              class="fas fa-users mr-2 text-sm"
+              [ngClass]="
+              activeLocations.isActive ? 'opacity-75' : 'text-blueGray-300'
+              "
+            ></i>
+            Active Locations
+          </a>
+        </li>
 
         <!-- <li class="items-center">
           <a
