--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -38,8 +38,8 @@
         class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64"
       >
         <div class="px-6">
-          <div class="flex flex-wrap justify-center">
-            <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center">
+          <div class="flex flex-wrap">
+            <!-- <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center">
               <div class="relative">
                 <img
                   alt="..."
@@ -47,8 +47,8 @@
                   class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 max-w-150-px"
                 />
               </div>
-            </div>
-            <div
+            </div> -->
+            <!-- <div
               class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center"
             >
               <div class="py-6 px-3 mt-32 sm:mt-0">
@@ -59,10 +59,17 @@
                   Connect
                 </button>
               </div>
-            </div>
+            </div> -->
             <div class="w-full lg:w-4/12 px-4 lg:order-1">
-              <div class="flex justify-center py-4 lg:pt-4 pt-8">
-                <div class="mr-4 p-3 text-center">
+              <div class="flex py-4 lg:pt-4 pt-8">
+                <div class="mr-4 p-3">
+                  <h2 class="text-4xl font-bold block">Venue Details:-</h2>
+                </div>
+                <!-- <
+
+    // [ngClass]="{'is-invalid': !this.form2.get('hobbies.email')?.valid && this.form2.get('userData.email')?.touched}"
+
+    // [ngClass]="{'is-invalid': !this.form2.get('hobbies.email')?.valid && this.form2.get('userData.email')?.touched}"v class="mr-4 p-3 text-center">
                   <span
                     class="text-xl font-bold block uppercase tracking-wide text-blueGray-600"
                   >
@@ -85,7 +92,7 @@
                     89
                   </span>
                   <span class="text-sm text-blueGray-400">Comments</span>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
