[fix] fix empty card import (empty-card==city card)

--- a/src/app/views/index/index.component.html
+++ b/src/app/views/index/index.component.html
@@ -203,6 +203,7 @@
 
         <!-- inserted a city card -->
 
+        <!-- <app-card-empty></app-card-empty> -->
         <app-card-empty></app-card-empty>
 
         <!-- ending city card -->
