--- a/src/app/views/user/venue-list/venue-list.component.html
+++ b/src/app/views/user/venue-list/venue-list.component.html
@@ -79,31 +79,7 @@
       </div>
     </div>
   </section>
-  <section class="relative py-20">
-
-    <div class="container px-4 mx-auto">
-
-      <div class="flex flex-wrap">
-        <div class="w-4/12 px-2">
-          <span class="text-sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-200">
-
-          </span>
-        </div>
-        <div class="w-full px-2 flex-1">
-          <a href="#" class="flex flex-col bg-blueGray-200 rounded-lg border shadow-md md:flex-row md:max-w-xl hover:bg-blueGray-200">
-            <div class="flex">
-
-              <img class="object-cover rounded-lg md:h-auto md:w-48 md:rounded-none md:rounded-lg" src="https://mdbootstrap.com/wp-content/uploads/2020/06/vertical.jpg" alt="" height="180" width="200">
-            </div>
-
-              <div class="flex flex-col p-4">
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Noteworthy technology acquisitions 2021</h5>
-                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Here are the biggest enterprise technology acquisitions of 2021 so far, in reverse chronological order.</p>
-            </div>
-        </a>
-        </div>
-      </div>
-    </div>
+  <section class="relative">
 
   </section>
 </main>
