--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-/* .img{
-  background-image: url(assets/img/pattern_angular.png);
-} */
+.img-size{
+  height: 210;
+  width: 250;
+}
