--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -191,6 +191,28 @@
 
         <li class="items-center">
           <a
+            [routerLink]="['/admin/subscription-report']"
+            class="text-xs uppercase py-3 font-bold block"
+            routerLinkActive
+            #subscriptionReport="routerLinkActive"
+            [ngClass]="
+            subscriptionReport.isActive
+                ? 'text-red-600 hover:text-red-700'
+                : 'text-blueGray-700 hover:text-blueGray-500'
+            "
+          >
+            <i
+              class="fas fa-tools mr-2 text-sm"
+              [ngClass]="
+              subscriptionReport.isActive ? 'opacity-75' : 'text-blueGray-300'
+              "
+            ></i>
+            Subscription Report
+          </a>
+        </li>
+
+        <li class="items-center">
+          <a
             [routerLink]="['/admin/website-settings']"
             class="text-xs uppercase py-3 font-bold block"
             routerLinkActive
