changes in ownerDashboard page

--- a/src/app/components/cards/card-donutchart/card-donutchart.component.html
+++ b/src/app/components/cards/card-donutchart/card-donutchart.component.html
@@ -1,5 +1,5 @@
-<div style="padding: 2rem; margin-top: 10%; margin-left: 20rem; margin-bottom: 5%;">
+<!-- <div class=" shadow-lg" style="padding: 2rem; margin-top: 10%; border: 1px solid white; border-radius: 10px; margin-left: 20rem; margin-bottom: 5%;"> -->
 
-    <ngx-donut-chart [data]="donutChartData" [title]="'Sessions'" [radius]="100" [thickness]="100" [margin]="50" style="width: 100vw; height: 100vh; padding: 2rem; border: border-rouded;">
-    </ngx-donut-chart>
-</div>
+<ngx-donut-chart [data]="donutChartData" [title]="'Sessions'" [radius]="100" [thickness]="100" [margin]="50" style="">
+</ngx-donut-chart>
+<!-- </div> -->
