--- a/src/app/views/owner-dashboard/owner-dashboard.component.html
+++ b/src/app/views/owner-dashboard/owner-dashboard.component.html
@@ -11,57 +11,24 @@
             <!-- Card stats -->
             <div class="flex flex-wrap justify-center">
                 <div class="w-full lg:w-6/12 xl:w-3/12 px-4">
-                    <!-- <app-card-stats
-            statSubtitle="TOTAL USERS"
-            statTitle="350,897"
-            statArrow="up"
-            statPercent="3.48"
-            statPercentColor="text-emerald-500"
-            statDescripiron="Since last month"
-            statIconName="far fa-chart-bar"
-            statIconColor="bg-red-500"
-          ></app-card-stats> -->
-                    <!-- <app-card-stats statSubtitle="TOTAL USERS" statTitle="350,897" statPercentColor="text-emerald-500" statDescripiron="Since last month" statIconName="fas fa-users" statIconColor="bg-red-500"></app-card-stats>
-                </div>
-                <div class="w-full lg:w-6/12 xl:w-3/12 px-4"> -->
-                    <!-- <app-card-stats
-            statSubtitle="TOTAL BOOKINGS"
-            statTitle="2,356"
-            statArrow="down"
-            statPercent="3.48"
-            statPercentColor="text-red-500"
-            statDescripiron="Since last week"
-            statIconName="fas fa-chart-pie"
-            statIconColor="bg-orange-500"
-          ></app-card-stats> -->
+
                     <app-card-stats statSubtitle="TOTAL BOOKINGS" statTitle="1817" statArrow="down" statPercentColor="text-red-500" statDescripiron="Since last week" statIconName="fas fa-money-bill-alt" statIconColor="bg-orange-500"></app-card-stats>
                 </div>
                 <div class="w-full lg:w-6/12 xl:w-3/12 px-4">
-                    <!-- <app-card-stats
-            statSubtitle="DAILY EARNING"
-            statTitle="924"
-            statArrow="down"
-            statPercent="1.10"
-            statPercentColor="text-orange-500"
-            statDescripiron="Since yesterday"
-            statIconName="fas fa-users"
-            statIconColor="bg-pink-500"
-          ></app-card-stats> -->
+
                     <app-card-stats statSubtitle="TODAY BOOKING" statTitle="18" statArrow="down" statPercentColor="text-orange-500" statDescripiron="Since yesterday" statIconName="fas fa-dollar-sign" statIconColor="bg-pink-500"></app-card-stats>
                 </div>
                 <div class="w-full lg:w-6/12 xl:w-3/12 px-4">
-                    <!-- <app-card-stats
-            statSubtitle="TOTAL EARNINGS"
-            statTitle="49,65%"
-            statArrow="up"
-            statPercent="12"
-            statPercentColor="text-emerald-500"
-            statDescripiron="Since last month"
-            statIconName="fas fa-percent"
-            statIconColor="bg-emerald-500"
-          ></app-card-stats> -->
+
+
                     <app-card-stats statSubtitle="Subscription End" statTitle="30 july " statArrow="up" statPercentColor="text-emerald-500" statDescripiron="Since last month" statIconName="fas fa-dollar-sign" statIconColor="bg-emerald-500"></app-card-stats>
                 </div>
+                <div class="w-full lg:w-6/12 xl:w-3/12 px-4">
+
+
+                    <app-card-stats statSubtitle="clicks" statTitle="1Mn" statArrow="up" statPercentColor="text-emerald-500" statDescripiron="Since last month" statIconName="fas fa-dollar-sign" statIconColor="bg-emerald-500"></app-card-stats>
+                </div>
+
             </div>
         </div>
     </div>
@@ -70,10 +37,10 @@
 
 <!-- end header stats -->
 
-<div class="  mb-12 xl:mb-0 px-4  flex justify-item-center py-20" style=" margin-top: -8%; width:100vw; background-color: #f5f3ff; display: flex; justify-content: center ;">
+<div class="  mb-12 xl:mb-0 px-4  flex justify-item-center py-20 bg-blueGray-100" style=" margin-top: -8%; width:100vw; display: flex; justify-content: center ;">
 
     <!-- venue list -->
-    <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded" style="width: 70vw;">
+    <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 p-8 shadow-lg rounded" style="width: 60vw;">
         <div class="rounded-t mb-0 px-4 py-3 border-0">
             <div class="flex flex-wrap items-center">
                 <div class="relative w-full px-4 max-w-full flex-grow flex-1">
@@ -189,13 +156,23 @@
 </div>
 <!-- ending bookiing request -->
 <!-- calender and donut chart -->
-<div class="flex flex-wrap " style="background-color: #f5f3ff;">
-    <app-card-calender></app-card-calender>
-    <app-card-donutchart></app-card-donutchart>
+<div class="px-4 mx-auto bg-blueGray-100 flex flex-1 justify-center items-center pb-20">
+    <div class="flex flex-wrap bg-blueGray-100">
+        <div class="w-full flex-1">
+            <div class="text-blueGray-700 rounded-lg shadow-lg flex justify-center bg-white border border-solid border-blueGray-100">
+                <app-card-calender class="p-10"></app-card-calender>
+            </div>
+        </div>
+        <div class="w-full px-4 flex-1">
+            <div class="p-10 text-blueGray-700 flex justify-center shadow-lg rounded-lg border border-solid border-blueGray-100 bg-white">
+                <app-card-donutchart></app-card-donutchart>
+            </div>
+        </div>
+    </div>
 </div>
-<!-- end calender and donut chart -->
 
-<div class="flex flex-wrap " style="padding-bottom: 5rem;  justify-content: center;background-color: #f5f3ff;">
+
+<!-- <div class="flex flex-wrap " style="padding-bottom: 5rem;  justify-content: center;background-color: #f5f3ff;">
     <div class="max-w-sm bg-white rounded overflow-hidden shadow-lg border  shadow-lg " style="margin-left: 3rem; justify-content: center; border-radius: 13px;">
         <div class="text-5xl " style="width:25rem;height: 10rem; display: flex; justify-content: center; padding-top: 3rem;">Light</div>
         <div class="" style="background-color: #e9d5ff;">
@@ -252,5 +229,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <app-footer></app-footer>
