[refactor] height of the div changed

--- a/src/app/views/owner/pricing/pricing.component.html
+++ b/src/app/views/owner/pricing/pricing.component.html
@@ -1,10 +1,10 @@
 <app-auth-navbar></app-auth-navbar>
 <main>
-    <div class="relative pt-16 pb-32 flex content-center items-center justify-center min-h-screen-75">
-        <div class="absolute top-0 w-full h-full bg-center bg-cover" style="
+    <div class="relative flex content-center items-center justify-center bg-blueGray-700" style="min-height: 50vh">
+        <!-- <div class="absolute top-0 w-full h-full bg-center bg-cover" style="
         background-image: url('https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80');">
             <span id="blackOverlay" class="w-full h-full absolute opacity-75 bg-black"></span>
-        </div>
+        </div> -->
         <div class="container relative mx-auto">
             <div class="items-center flex flex-wrap">
                 <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center flex-1">
@@ -12,7 +12,7 @@
                         <h1 class="text-white font-semibold text-5xl">
                             Our <span class="font-bold">plans</span> for your <span class="font-bold">strategies.</span>
                         </h1>
-                        <p class="mt-4 text-lg text-blueGray-200">
+                        <p class="mt-4 text-xl text-blueGray-200">
                             See below our three main plans for your business, for your Party Plots or Banquets.It starts from here!
                         </p>
                     </div>
@@ -54,7 +54,7 @@
                 </ul>
               </div>
               <div class="py-4 relative flex justify-center w-12/12">
-                <button class="bg-transparent text-blueGray-500 active:bg-blueGray-600 font-bold uppercase text-base px-4 py-2 rounded border border-solid border-blueGray-500 shadow-md hover:shadow-lg outline-none focus:outline-none mb-2 ease-linear transition-all duration-150" type="button">
+                <button class="bg-transparent text-blueGray-700 tracking-wide active:bg-blueGray-600 font-semibold uppercase text-sm px-4 py-2 rounded border border-solid border-blueGray-500 shadow-md hover:shadow-lg outline-none focus:outline-none mb-2 ease-linear transition-all duration-150" type="button">
                   Get Simple
                 </button>
               </div>
@@ -83,7 +83,7 @@
                 </ul>
               </div>
               <div class="py-4 relative flex justify-center w-12/12">
-                <button class="bg-transparent text-blueGray-500 active:bg-blueGray-600 font-bold uppercase text-base px-4 py-2 rounded border border-solid border-blueGray-500 shadow-md hover:shadow-lg outline-none focus:outline-none mb-2 ease-linear transition-all duration-150" type="button">
+                <button class="bg-blueGray-700 text-white tracking-wide active:bg-blueGray-600 font-semibold uppercase text-sm px-4 py-2 rounded border border-solid border-blueGray-500 shadow-md hover:shadow-lg outline-none focus:outline-none mb-2 ease-linear transition-all duration-150" type="button">
                   Get Basic
                 </button>
               </div>
@@ -112,7 +112,7 @@
                 </ul>
               </div>
               <div class="py-4 relative flex justify-center w-12/12">
-                <button class="bg-transparent text-blueGray-500 active:bg-blueGray-600 font-bold uppercase text-base px-4 py-2 rounded border border-solid border-blueGray-500 shadow-md hover:shadow-lg outline-none focus:outline-none mb-2 ease-linear transition-all duration-150" type="button">
+                <button class="bg-transparent text-blueGray-700 tracking-wide active:bg-blueGray-600 font-semibold uppercase text-sm px-4 py-2 rounded border border-solid border-blueGray-500 shadow-md hover:shadow-lg outline-none focus:outline-none mb-2 ease-linear transition-all duration-150" type="button">
                   Get Pro
                 </button>
               </div>
