[feature] terms and faq page completed..and privacy terms and faq this three pages are in privacypolicy branch means this branch

--- a/src/app/views/privacy-policy/privacy-policy.component.html
+++ b/src/app/views/privacy-policy/privacy-policy.component.html
@@ -2,7 +2,7 @@
 <section class="text-5xl mt-14 bg-blueGray-100" style="padding: 3rem; display: flex; justify-content: center; ">Privacy-Policy</section>
 <div class=" px-40 py-14">
     <p>
-        <span class="m-5" style="display: inline-block;">  As you use our services, we want you to be clear on how we’re collecting information and using it. Our Policy explains what information we collect, why we collect it and how we use it. We reserve the right to revise or make changes to these Privacy Policies of Weddingz.in by updating this page. Revised policies take effect as soon as they are published. 
+        <span class="m-5" style="display: inline-block;">  As you use our services, we want you to be clear on how we’re collecting information and using it. Our Policy explains what information we collect, why we collect it and how we use it. We reserve the right to revise or make changes to these Privacy Policies of VenuePod.in by updating this page. Revised policies take effect as soon as they are published. 
         </span>
 
         <span class="m-5" style="display: inline-block;"> 
@@ -29,22 +29,22 @@
         <span class="m-5" style="display: inline-block;"> 
             <strong>Links to other website:</strong>
             <br>
-            Weddingz.in has links with other online entities. We are not responsible for the content or privacy practices of these third party websites. Users should click on these external links at their own risk. We encourage you to review their Privacy Policy and Terms of Use, if required.
+            VenuePod.in has links with other online entities. We are not responsible for the content or privacy practices of these third party websites. Users should click on these external links at their own risk. We encourage you to review their Privacy Policy and Terms of Use, if required.
         </span>
         <span class="m-5" style="display: inline-block;"> 
             <strong>Consent:</strong>
             <br>
-            By accessing Weddingz.in or providing information on our portal, you are in automatic agreement with this Privacy Policy.
+            By accessing VenuePod.in or providing information on our portal, you are in automatic agreement with this Privacy Policy.
         </span>
         <span class="m-5" style="display: inline-block;"> 
             <strong>Governing Law:</strong>
             <br>
-            This Privacy Policy of Weddingz.in is under the jurisdiction of India, thereby adhering to the law of the Indian government.
+            This Privacy Policy of VenuePod.in is under the jurisdiction of India, thereby adhering to the law of the Indian government.
         </span>
         <span class="m-5" style="display: inline-block;"> 
             <strong>Contact</strong>
             <br>
-            For further enquiries or information, feel free to mail us at <a href="info@weddingz.in" style="color: brown;">info@weddingz.in</a>  .
+            For further enquiries or information, feel free to mail us at <a href="info@VenuePod.in" style="color: brown;">info@VenuePod.in</a>  .
         </span>
     </p>
 </div>
