[refactor] remove unwanted code

--- a/src/app/components/cards/card-empty/card-empty.component.html
+++ b/src/app/components/cards/card-empty/card-empty.component.html
@@ -1,95 +1,111 @@
 <div class="container mx-auto px-4 -mt-32">
-    <div class="relative flex flex-col min-w-0 break-words  w-full mb-6 shadow-xl rounded-lg -mt-64 bg-lightBlue-200">
-        <div class="px-6">
+  <div
+    class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-xl rounded-lg -mt-64 bg-blueGray-200"
+  >
+    <div class="px-6">
+      <p class="text-black font-semibold text-4xl text-center mt-6 mb-6">
+        City Names
+      </p>
 
-            <p class="text-black font-semibold text-4xl text-center mt-6 mb-6">City Names </p>
+      <!-- First Row -->
 
-
-
-            <!-- First Row -->
-
-
-            <div class="container px-4 mx-auto">
-                <div class="flex flex-wrap">
-                    <!-- First -->
-                    <div class="w-full px-4 flex-1">
-                        <div class="text-sm block my-4 p-3 bg-white shadow-lg hover:shadow cursor-pointer  text-blueGray-700 rounded border border-solid ">
-
-                            <div class="flex flex-wrap">
-                                <div class="w-4/12 px-2 items-center">
-                                    <div class="items-center flex">
-                                        <span class="w-16 mt-1  bg-blueGray-200 inline-flex items-center justify-center rounded-full">
-                                          <img
-                                            alt="..."
-                                            class="w-full rounded-full align-middle border-none shadow-lg"
-                                            src="assets/img/ahmd_City.png"
-                                          />
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="w-full px-4 flex-1">
-                                    <h4 class="text-2xl block my-1 p-1  text-blueGray-700 "><strong>Ahmedabad</strong></h4>
-                                    <h6 class="text-xl block my-1  p-1 text-blueGray-700 ">Gujarat</h6>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- ssecond -->
-                    <div class="w-full px-4 flex-1">
-                        <div class="text-sm block my-4 p-3 bg-white shadow-lg hover:shadow cursor-pointer  text-blueGray-700 rounded border border-solid ">
-
-                            <div class="flex flex-wrap">
-                                <div class="w-4/12 px-2 items-center">
-                                    <div class="items-center flex">
-                                        <span class="w-16 mt-1  bg-blueGray-200 inline-flex items-center justify-center rounded-full">
-                                          <img
-                                            alt="..."
-                                            class="w-full rounded-full align-middle border-none shadow-lg"
-                                            src="assets/img/ahmd_City.png"
-                                          />
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="w-full px-4 flex-1">
-                                    <h4 class="text-2xl block my-1 p-1  text-blueGray-700 "><strong>Ahmedabad</strong></h4>
-                                    <h6 class="text-xl block my-1  p-1 text-blueGray-700 ">Gujarat</h6>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- end Second -->
-
-                    <!-- third -->
-                    <div class="w-full px-4 flex-1">
-                        <div class="text-sm block my-4 p-3 bg-white shadow-lg hover:shadow cursor-pointer  text-blueGray-700 rounded border border-solid ">
-
-                            <div class="flex flex-wrap">
-                                <div class="w-4/12 px-2 items-center">
-                                    <div class="items-center flex">
-                                        <span class="w-16 mt-1  bg-blueGray-200 inline-flex items-center justify-center rounded-full">
-                                          <img
-                                            alt="..."
-                                            class="w-full rounded-full align-middle border-none shadow-lg"
-                                            src="assets/img/ahmd_City.png"
-                                          />
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="w-full px-4 flex-1">
-                                    <h4 class="text-2xl block my-1 p-1  text-blueGray-700 "><strong>Ahmedabad</strong></h4>
-                                    <h6 class="text-xl block my-1  p-1 text-blueGray-700 ">Gujarat</h6>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- end third -->
+      <div class="container px-4 mx-auto">
+        <div class="flex flex-wrap">
+          <!-- First -->
+          <div class="w-full px-4 flex-1">
+            <div
+              class="text-sm block my-4 p-3 bg-white shadow-lg hover:shadow cursor-pointer text-blueGray-700 rounded border border-solid"
+            >
+              <div class="flex flex-wrap">
+                <div class="w-4/12 px-2 items-center">
+                  <div class="items-center flex">
+                    <span
+                      class="w-16 mt-1 bg-blueGray-200 inline-flex items-center justify-center rounded-full"
+                    >
+                      <img
+                        alt="..."
+                        class="w-full rounded-full align-middle border-none shadow-lg"
+                        src="assets/img/ahmd_City.png"
+                      />
+                    </span>
+                  </div>
                 </div>
+                <div class="w-full px-4 flex-1">
+                  <h4 class="text-2xl block my-1 p-1 text-blueGray-700">
+                    <strong>Ahmedabad</strong>
+                  </h4>
+                  <h6 class="text-xl block my-1 p-1 text-blueGray-700">
+                    Gujarat
+                  </h6>
+                </div>
+              </div>
             </div>
+          </div>
+          <!-- ssecond -->
+          <div class="w-full px-4 flex-1">
+            <div
+              class="text-sm block my-4 p-3 bg-white shadow-lg hover:shadow cursor-pointer text-blueGray-700 rounded border border-solid"
+            >
+              <div class="flex flex-wrap">
+                <div class="w-4/12 px-2 items-center">
+                  <div class="items-center flex">
+                    <span
+                      class="w-16 mt-1 bg-blueGray-200 inline-flex items-center justify-center rounded-full"
+                    >
+                      <img
+                        alt="..."
+                        class="w-full rounded-full align-middle border-none shadow-lg"
+                        src="assets/img/ahmd_City.png"
+                      />
+                    </span>
+                  </div>
+                </div>
+                <div class="w-full px-4 flex-1">
+                  <h4 class="text-2xl block my-1 p-1 text-blueGray-700">
+                    <strong>Ahmedabad</strong>
+                  </h4>
+                  <h6 class="text-xl block my-1 p-1 text-blueGray-700">
+                    Gujarat
+                  </h6>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end Second -->
 
-
+          <!-- third -->
+          <div class="w-full px-4 flex-1">
+            <div
+              class="text-sm block my-4 p-3 bg-white shadow-lg hover:shadow cursor-pointer text-blueGray-700 rounded border border-solid"
+            >
+              <div class="flex flex-wrap">
+                <div class="w-4/12 px-2 items-center">
+                  <div class="items-center flex">
+                    <span
+                      class="w-16 mt-1 bg-blueGray-200 inline-flex items-center justify-center rounded-full"
+                    >
+                      <img
+                        alt="..."
+                        class="w-full rounded-full align-middle border-none shadow-lg"
+                        src="assets/img/ahmd_City.png"
+                      />
+                    </span>
+                  </div>
+                </div>
+                <div class="w-full px-4 flex-1">
+                  <h4 class="text-2xl block my-1 p-1 text-blueGray-700">
+                    <strong>Ahmedabad</strong>
+                  </h4>
+                  <h6 class="text-xl block my-1 p-1 text-blueGray-700">
+                    Gujarat
+                  </h6>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end third -->
         </div>
+      </div>
     </div>
+  </div>
 </div>
