--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -144,7 +144,6 @@
             ></i>
             Tables
           </a>
-
         </li>
         <li class="items-center">
           <a
@@ -153,7 +152,7 @@
             routerLinkActive
             #userTables="routerLinkActive"
             [ngClass]="
-            userTables.isActive
+              userTables.isActive
                 ? 'text-red-600 hover:text-red-700'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
@@ -161,7 +160,7 @@
             <i
               class="fas fa-users mr-2 text-sm"
               [ngClass]="
-              userTables.isActive ? 'opacity-75' : 'text-blueGray-300'
+                userTables.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
             User tables
@@ -174,7 +173,7 @@
             routerLinkActive
             #activeLocations="routerLinkActive"
             [ngClass]="
-            activeLocations.isActive
+              activeLocations.isActive
                 ? 'text-red-600 hover:text-red-700'
                 : 'text-blueGray-700 hover:text-blueGray-500'
             "
@@ -182,7 +181,7 @@
             <i
               class="fas fa-users mr-2 text-sm"
               [ngClass]="
-              activeLocations.isActive ? 'opacity-75' : 'text-blueGray-300'
+                activeLocations.isActive ? 'opacity-75' : 'text-blueGray-300'
               "
             ></i>
             Active Locations
@@ -213,16 +212,16 @@
       </ul>
 
       <!-- Divider -->
-      <hr class="my-4 md:min-w-full" />
+      <!-- <hr class="my-4 md:min-w-full" /> -->
       <!-- Heading -->
-      <h6
+      <!-- <h6
         class="md:min-w-full text-blueGray-500 text-xs uppercase font-bold block pt-1 pb-4 no-underline"
       >
         Auth Layout Pages
-      </h6>
+      </h6> -->
       <!-- Navigation -->
 
-      <ul class="md:flex-col md:min-w-full flex flex-col list-none md:mb-4">
+      <!-- <ul class="md:flex-col md:min-w-full flex flex-col list-none md:mb-4">
         <li class="items-center">
           <a
             [routerLink]="['/auth/login']"
@@ -242,19 +241,19 @@
             Register
           </a>
         </li>
-      </ul>
+      </ul> -->
 
       <!-- Divider -->
-      <hr class="my-4 md:min-w-full" />
+      <!-- <hr class="my-4 md:min-w-full" /> -->
       <!-- Heading -->
-      <h6
+      <!-- <h6
         class="md:min-w-full text-blueGray-500 text-xs uppercase font-bold block pt-1 pb-4 no-underline"
       >
         No Layout Pages
-      </h6>
+      </h6> -->
       <!-- Navigation -->
 
-      <ul class="md:flex-col md:min-w-full flex flex-col list-none md:mb-4">
+      <!-- <ul class="md:flex-col md:min-w-full flex flex-col list-none md:mb-4">
         <li class="items-center">
           <a
             [routerLink]="['/landing']"
@@ -274,7 +273,7 @@
             Profile Page
           </a>
         </li>
-      </ul>
+      </ul> -->
 
       <!-- Divider -->
       <hr class="my-4 md:min-w-full" />
